Add VPC config to stack lambdas
This ensures lambdas run within the configured VPC when
`keights_stack.lambda_subnets` is defined. The lambdas used by
Keights do not accept any external requests, but this is a
security requirement in some environments.

The security group is configured to allow only outbound traffic
on port 443 so they can access Amazon APIs.

This changes `AWS::IAM::Role` CloudFormation resources to include
`ManagedPolicyArns` instead of the `AWS::IAM::ManagedPolicy`
resources including `Roles`, to ensure that the policy is created
and attached before the Lambdas are deployed.

--- a/stack/ansible/keights-stack/tasks/present.yml
+++ b/stack/ansible/keights-stack/tasks/present.yml
@@ -168,6 +168,7 @@
       NodePortAccessCidr: '{{ keights_stack.node_port_access_cidr | default("") }}'
       KeightsVersion: '{{ keights_version }}'
       ResourceBucket: '{{ keights_stack.resource_bucket }}'
+      LambdaSubnetIds: '{{ keights_stack.lambda_subnet_ids | default([]) | join(",") }}'
     tags:
       KubernetesCluster: '{{ keights_stack.cluster_name }}'
       k8s:version: '{{ k8s_version }}'
@@ -204,6 +205,8 @@
       KeyPair: '{{ keights_stack.etcd.keypair }}'
       InstanceProfile: '{{ etcd_instance_profile }}'
       SecurityGroups: '{{ ([common_stack.stack_outputs.EtcdSecurityGroup] + keights_stack.etcd.extra_security_groups | default([])) | join(",") }}'
+      LambdaSecurityGroup: '{{ common_stack.stack_outputs.LambdaSecurityGroup | default(omit) }}'
+      LambdaSubnetIds: '{{ keights_stack.lambda_subnet_ids | default([]) | join(",") }}'
       AutoNamerLambdaRoleArn: '{{ auto_namer_lambda_role_arn }}'
       KubeCaLambdaRoleArn: '{{ kube_ca_lambda_role_arn }}'
       SubnetToAzLambdaRoleArn: '{{ subnet_to_az_lambda_role_arn }}'
@@ -283,11 +286,13 @@
       NumInstances: '{{ keights_stack.masters.subnet_ids | length }}'
       VpcId: '{{ keights_stack.vpc_id }}'
       SubnetIds: '{{ keights_stack.masters.subnet_ids | join(",") }}'
+      LambdaSubnetIds: '{{ keights_stack.lambda_subnet_ids | default([]) | join(",") }}'
       LoadBalancerSubnetIds: '{{ keights_stack.masters.subnet_ids | join(",") }}'
       ImageId: '{{ keights_stack.masters.image_id if keights_stack.masters.image_id is defined else image_id }}'
       InstanceType: '{{ keights_stack.masters.instance_type }}'
       KeyPair: '{{ keights_stack.masters.keypair }}'
       MasterInstanceProfile: '{{ master_instance_profile }}'
+      LambdaSecurityGroup: '{{ common_stack.stack_outputs.LambdaSecurityGroup | default(omit) }}'
       LoadBalancerScheme: '{{ keights_stack.masters.load_balancer_scheme }}'
       LoadBalancerSecurityGroup: '{{ common_stack.stack_outputs.LoadBalancerSecurityGroup }}'
       LoadBalancerIdleTimeout: '{{ keights_stack.masters.load_balancer_idle_timeout | default(600) }}'
@@ -356,6 +361,8 @@
       SpotInstancePools: '{{ item.spot.instance_pools | default(omit) }}'
       SpotMaxPrice: '{{ item.spot.max_price | default(omit) }}'
       BasicLambdaRoleArn: '{{ basic_lambda_role_arn }}'
+      LambdaSecurityGroup: '{{ common_stack.stack_outputs.LambdaSecurityGroup | default(omit) }}'
+      LambdaSubnetIds: '{{ keights_stack.lambda_subnet_ids | default([]) | join(",") }}'
     tags:
       KubernetesCluster: '{{ keights_stack.cluster_name }}'
       k8s:version: '{{ k8s_version }}'
