--- a/stack/cloudformation/master-stacked.yml
+++ b/stack/cloudformation/master-stacked.yml
@@ -20,6 +20,11 @@ Parameters:
       List of subnets IDs in VPC where cluster will be placed.
       The number of subnets must match the NumInstances parameter.
     Type: List<AWS::EC2::Subnet::Id>
+  LambdaSubnetIds:
+    Description: >-
+      List of subnet IDs in VPC where lambdas will be placed.
+    Type: CommaDelimitedList
+    Default: ''
   LoadBalancerSubnetIds:
     Description: >-
       List of subnets IDs in VPC for API load balancer.
@@ -37,6 +42,10 @@ Parameters:
   MasterInstanceProfile:
     Description: Name of IAM Instance profile to assign to instances
     Type: String
+  LambdaSecurityGroup:
+    Description: Security group for lambdas
+    Type: String
+    Default: ''
   LoadBalancerScheme:
     Description: Scheme of API load balancer
     Type: String
@@ -162,6 +171,7 @@ Conditions:
   HasThreeMasters: !Equals [!Ref NumInstances, 3]
   HasKubeadmInitConfigTemplate: !Not [!Equals [!Ref KubeadmInitConfigTemplate, '']]
   HasKubeProxy: !Equals [!Ref EnableKubeProxy, 'true']
+  HasLambdaVpcConfig: !Not [!Equals [!Join ['', !Ref LambdaSubnetIds], '']]
 
 Resources:
   SubnetToAzFunction:
@@ -174,6 +184,11 @@ Resources:
       Runtime: go1.x
       Timeout: 30
       Role: !Ref SubnetToAzLambdaRoleArn
+      VpcConfig: !If
+        - HasLambdaVpcConfig
+        - SecurityGroupIds: [!Ref LambdaSecurityGroup]
+          SubnetIds: !Ref LambdaSubnetIds
+        - !Ref AWS::NoValue
 
   KubeCaFunction:
     Type: AWS::Lambda::Function
@@ -185,6 +200,11 @@ Resources:
       Runtime: go1.x
       Timeout: 60
       Role: !Ref KubeCaLambdaRoleArn
+      VpcConfig: !If
+        - HasLambdaVpcConfig
+        - SecurityGroupIds: [!Ref LambdaSecurityGroup]
+          SubnetIds: !Ref LambdaSubnetIds
+        - !Ref AWS::NoValue
 
   AutoNamingFunction:
     Type: AWS::Lambda::Function
@@ -203,6 +223,11 @@ Resources:
           HOST_BASE_NAME: !Ref EtcdPrefix
           HOSTED_ZONE_NAME: !Ref EtcdDomain
           HOSTED_ZONE_ID: !Ref HostedZoneId
+      VpcConfig: !If
+        - HasLambdaVpcConfig
+        - SecurityGroupIds: [!Ref LambdaSecurityGroup]
+          SubnetIds: !Ref LambdaSubnetIds
+        - !Ref AWS::NoValue
 
   AutoNamingEventsRule:
     Type: AWS::Events::Rule
