Make etcd volumes configurable
This adds `volume_type`, `volume_iops`, and `volume_throughput` to
the configuration of etcd volumes.

--- a/stack/ansible/keights-stack/tasks/present.yml
+++ b/stack/ansible/keights-stack/tasks/present.yml
@@ -215,6 +215,9 @@
       Domain: '{{ keights_stack.etcd_domain | default(default_etcd_domain) }}'
       Prefix: '{{ keights_stack.etcd_prefix | default("etcd") }}'
       VolumeSize: '{{ keights_stack.etcd.volume_size | default(10) }}'
+      VolumeType: '{{ keights_stack.etcd.volume_type | default("gp2") }}'
+      VolumeIops: '{{ keights_stack.etcd.volume_iops | default(0) }}'
+      VolumeThroughput: '{{ keights_stack.etcd.volume_throughput | default(0) }}'
       Device: '{{ etcd_device if etcd_device.startswith("/dev/") else "/dev/{}".format(etcd_device) }}'
       EtcdVersion: '{{ keights_stack.etcd.etcd_version | default(default_etcd_version) }}'
       ImageRepository: '{{ keights_stack.etcd.image_repository | default("k8s.gcr.io") }}'
@@ -309,6 +312,9 @@
       EtcdDomain: '{{ keights_stack.etcd_domain | default(default_etcd_domain) }}'
       EtcdPrefix: '{{ keights_stack.etcd_prefix | default("etcd") }}'
       EtcdVolumeSize: '{{ keights_stack.masters.etcd_volume_size | default(10) }}'
+      EtcdVolumeType: '{{ keights_stack.masters.etcd_volume_type | default("gp2") }}'
+      EtcdVolumeIops: '{{ keights_stack.masters.etcd_volume_iops | default(0) }}'
+      EtcdVolumeThroughput: '{{ keights_stack.masters.etcd_volume_throughput | default(0) }}'
       EtcdDevice: '{{ etcd_device if etcd_device.startswith("/dev/") else "/dev/{}".format(etcd_device) }}'
       ImageRepository: '{{ keights_stack.masters.image_repository | default("k8s.gcr.io") }}'
       KubernetesVersion: '{{ k8s_version }}'
