--- a/stack/cloudformation/etcd.yml
+++ b/stack/cloudformation/etcd.yml
@@ -73,6 +73,21 @@ Parameters:
     Description: Size of etcd volume in GB
     Default: 10
     Type: Number
+  VolumeType:
+    Description: Type of etcd volume
+    Default: gp2
+    Type: String
+    AllowedValues: [gp2, gp3, io1, io2]
+  VolumeIops:
+    Description: >-
+      Iops of etcd volume. Required when EtcdVolumeType is `io1` or `io2`,
+      and can also be used with `gp3`.
+    Default: 0
+    Type: Number
+  VolumeThroughput:
+    Description: Throughput of etcd volume
+    Default: 0
+    Type: Number
   Device:
     Description: Name of the etcd EBS volume, using the full device path.
     Default: /dev/xvdg
@@ -103,6 +118,8 @@ Parameters:
 
 Conditions:
   HasThreeEtcdInstances: !Equals [!Ref NumInstances, 3]
+  HasIops: !Not [!Equals [!Ref VolumeIops, 0]]
+  HasThroughput: !Not [!Equals [!Ref VolumeThroughput, 0]]
   HasLambdaVpcConfig: !Not [!Equals [!Join ['', !Ref LambdaSubnetIds], '']]
 
 Resources:
@@ -235,7 +252,9 @@ Resources:
     Properties:
       AvailabilityZone: !Select [0, !Split [",", !GetAtt SubnetToAz.AvailabilityZones]]
       Size: !Ref VolumeSize
-      VolumeType: gp2
+      VolumeType: !Ref VolumeType
+      Iops: !If [HasIops, !Ref VolumeIops, !Ref AWS::NoValue]
+      Throughput: !If [HasThroughput, !Ref VolumeThroughput, !Ref AWS::NoValue]
       Encrypted: true
       Tags:
         - Key: Name
@@ -249,7 +268,9 @@ Resources:
     Properties:
       AvailabilityZone: !Select [1, !Split [",", !GetAtt SubnetToAz.AvailabilityZones]]
       Size: !Ref VolumeSize
-      VolumeType: gp2
+      VolumeType: !Ref VolumeType
+      Iops: !If [HasIops, !Ref VolumeIops, !Ref AWS::NoValue]
+      Throughput: !If [HasThroughput, !Ref VolumeThroughput, !Ref AWS::NoValue]
       Encrypted: true
       Tags:
         - Key: Name
@@ -263,7 +284,9 @@ Resources:
     Properties:
       AvailabilityZone: !Select [2, !Split [",", !GetAtt SubnetToAz.AvailabilityZones]]
       Size: !Ref VolumeSize
-      VolumeType: gp2
+      VolumeType: !Ref VolumeType
+      Iops: !If [HasIops, !Ref VolumeIops, !Ref AWS::NoValue]
+      Throughput: !If [HasThroughput, !Ref VolumeThroughput, !Ref AWS::NoValue]
       Encrypted: true
       Tags:
         - Key: Name
