Update references to `k8s.gcr.io` to `registry.k8s.io`
See https://github.com/kubernetes/k8s.io/wiki/New-Registry-url-for-Kubernetes-(registry.k8s.io).

--- a/stack/ansible/keights-stack/defaults/main.yml
+++ b/stack/ansible/keights-stack/defaults/main.yml
@@ -1,4 +1,5 @@
 lookup_image: true
 subnet_tag_map: {}
 default_etcd_version: '3.5.5-0'
-sandbox_image: k8s.gcr.io/pause:3.8
+default_image_repository: registry.k8s.io
+sandbox_image: '{{ default_image_repository }}/pause:3.8'
