--- a/stack/ansible/keights-stack/tasks/present.yml
+++ b/stack/ansible/keights-stack/tasks/present.yml
@@ -220,7 +220,7 @@
       VolumeThroughput: '{{ keights_stack.etcd.volume_throughput | default(0) }}'
       Device: '{{ etcd_device if etcd_device.startswith("/dev/") else "/dev/{}".format(etcd_device) }}'
       EtcdVersion: '{{ keights_stack.etcd.etcd_version | default(default_etcd_version) }}'
-      ImageRepository: '{{ keights_stack.etcd.image_repository | default("k8s.gcr.io") }}'
+      ImageRepository: '{{ keights_stack.etcd.image_repository | default(default_image_repository) }}'
       KeightsVersion: '{{ keights_version }}'
       ResourceBucket: '{{ keights_stack.resource_bucket }}'
       # Piping to_json escapes the string so it can be put on one line in the CloudFormation template.
@@ -261,7 +261,7 @@
       EtcdDomain: '{{ keights_stack.etcd_domain | default(default_etcd_domain) }}'
       EtcdPrefix: '{{ keights_stack.etcd_prefix | default("etcd") }}'
       EtcdAvailabilityZones: '{{ etcd_stack.stack_outputs.AvailabilityZones }}'
-      ImageRepository: '{{ keights_stack.masters.image_repository | default("k8s.gcr.io") }}'
+      ImageRepository: '{{ keights_stack.etcd.image_repository | default(default_image_repository) }}'
       KubernetesVersion: '{{ k8s_version }}'
       KeightsVersion: '{{ keights_version }}'
       ResourceBucket: '{{ keights_stack.resource_bucket }}'
@@ -316,7 +316,7 @@
       EtcdVolumeIops: '{{ keights_stack.masters.etcd_volume_iops | default(0) }}'
       EtcdVolumeThroughput: '{{ keights_stack.masters.etcd_volume_throughput | default(0) }}'
       EtcdDevice: '{{ etcd_device if etcd_device.startswith("/dev/") else "/dev/{}".format(etcd_device) }}'
-      ImageRepository: '{{ keights_stack.masters.image_repository | default("k8s.gcr.io") }}'
+      ImageRepository: '{{ keights_stack.etcd.image_repository | default(default_image_repository) }}'
       KubernetesVersion: '{{ k8s_version }}'
       KeightsVersion: '{{ keights_version }}'
       ResourceBucket: '{{ keights_stack.resource_bucket }}'
