--- a/stack/cloudformation/etcd.yml
+++ b/stack/cloudformation/etcd.yml
@@ -98,7 +98,7 @@ Parameters:
   ImageRepository:
     Description: Repository for core Kubernetes container images
     Type: String
-    Default: k8s.gcr.io
+    Default: registry.k8s.io
   KeightsVersion:
     Description: Version of Keights
     Type: String
@@ -114,7 +114,7 @@ Parameters:
       version = 2
       [plugins]
         [plugins."io.containerd.grpc.v1.cri"]
-          sandbox_image = "k8s.gcr.io/pause:3.8"
+          sandbox_image = "registry.k8s.io/pause:3.8"
           [plugins."io.containerd.grpc.v1.cri".containerd]
             default_runtime_name = "runc"
             [plugins."io.containerd.grpc.v1.cri".containerd.default_runtime]
