--- a/stack/cloudformation/master-stacked.yml
+++ b/stack/cloudformation/master-stacked.yml
@@ -132,7 +132,7 @@ Parameters:
   ImageRepository:
     Description: Repository for core Kubernetes container images
     Type: String
-    Default: k8s.gcr.io
+    Default: registry.k8s.io
   KubernetesVersion:
     Description: Version of Kubernetes
     Type: String
@@ -163,7 +163,7 @@ Parameters:
       version = 2
       [plugins]
         [plugins."io.containerd.grpc.v1.cri"]
-          sandbox_image = "k8s.gcr.io/pause:3.8"
+          sandbox_image = "registry.k8s.io/pause:3.8"
           [plugins."io.containerd.grpc.v1.cri".containerd]
             default_runtime_name = "runc"
             [plugins."io.containerd.grpc.v1.cri".containerd.default_runtime]
