--- a/stack/cloudformation/node.yml
+++ b/stack/cloudformation/node.yml
@@ -74,7 +74,7 @@ Parameters:
       version = 2
       [plugins]
         [plugins."io.containerd.grpc.v1.cri"]
-          sandbox_image = "k8s.gcr.io/pause:3.8"
+          sandbox_image = "registry.k8s.io/pause:3.8"
           [plugins."io.containerd.grpc.v1.cri".containerd]
             default_runtime_name = "runc"
             [plugins."io.containerd.grpc.v1.cri".containerd.default_runtime]
